--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.74.11",
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
