--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
